@startuml Diagrama base de datos
hide circle
skinparam linetype ortho

entity usuario {
  id : int <<PK>>
  nombre : varchar
  correo : varchar
  password_hash : text
  rol : varchar
  estado : varchar
  fecha_creacion : timestamp
}

entity perfil {
  id : int <<PK>>
  usuario_id : int <<FK>>
  telefono : varchar
  municipio : varchar
  finca : varchar
  idioma : varchar
  foto_url : text
}

entity ubicacion {
  id : int <<PK>>
  usuario_id : int <<FK>>
  latitud : decimal
  longitud : decimal
}

entity cultivo {
  id : int <<PK>>
  usuario_id : int <<FK>>
  nombre : varchar
  tipo : varchar
  area : decimal
  fecha_siembra : date
  estado : varchar
  fecha_creacion : timestamp
}

entity cultivo_foto {
  id : int <<PK>>
  cultivo_id : int <<FK>>
  url : text
  fecha : timestamp
}

entity cultivo_observacion {
  id : int <<PK>>
  cultivo_id : int <<FK>>
  descripcion : text
  fecha : timestamp
}

entity recomendacion {
  id : int <<PK>>
  cultivo_id : int <<FK>>
  tipo : varchar
  descripcion : text
  prioridad : varchar
  estado : varchar
  fecha : timestamp
}

entity insumo {
  id : int <<PK>>
  nombre : varchar
  tipo : varchar
  descripcion : varchar
  impacto_alto : boolean
}

entity aplicacion_insumo {
  id : int <<PK>>
  cultivo_id : int <<FK>>
  insumo_id : int <<FK>>
  cantidad : decimal
  costo : decimal
  fecha : date
}

entity notificacion {
  id : int <<PK>>
  usuario_id : int <<FK>>
  tipo : varchar
  mensaje : text
  leida : boolean
  fecha : timestamp
}

entity reporte {
  id : int <<PK>>
  usuario_id : int <<FK>>
  tipo : varchar
  fecha : timestamp
}

usuario ||--|| perfil : tiene
usuario ||--o{ ubicacion : posee
usuario ||--o{ cultivo : gestiona
usuario ||--o{ notificacion : recibe
usuario ||--o{ reporte : genera

cultivo ||--o{ cultivo_foto : contiene
cultivo ||--o{ cultivo_observacion : registra
cultivo ||--o{ recomendacion : recibe
cultivo ||--o{ aplicacion_insumo : usa

insumo ||--o{ aplicacion_insumo : aplicado_en

@enduml